# apibrasil-py

./: .gitignore  README.md  Service.py  example.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
apigratis_sdk_python.egg-info/: PKG-INFO
src/api_brasil/: Service.py  __init__.py
src/api_brasil/api_client/: client_builder.py
src/api_brasil/features/cep_geolocation/: __init__.py
src/api_brasil/features/cnpj/: __init__.py
src/api_brasil/features/correios/: __init__.py
src/api_brasil/features/cpf/: __init__.py
src/api_brasil/features/interfaces/: __init__.py
src/api_brasil/features/sms/: __init__.py
src/api_brasil/features/vehicles/: __init__.py
src/api_brasil/features/whatsapp/: __init__.py
