[tool.poetry]
name = "api-brasil"
version = "2.0.0"
description = "A ideia desse SDK é otimizar o tempo de código dos usuários auxiliando na integração com a plataforma."
license = "MIT"
readme = "README.md"
authors = [
    "Ivanildo Barauna de Souza Junior <ivanildo.jnr@outlook.com>",
    "APIBRASIL <contato@apibrasil.com.br>"
]
classifiers = [
     "Intended Audience :: Developers",
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = ["src/"]
include = ["api-brasil*"]


[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.urls]
Homepage = "https://github.com/APIBrasil/apigratis-sdk-python"
Repository = "https://github.com/APIBrasil/apigratis-sdk-python.git"
BugTracker = "https://github.com/APIBrasil/apigratis-sdk-python/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
